# pseudo

./: .gitignore  CMakeLists.txt  README.md  makefile  makenrun.sh  pseudo  savecmake  tokens.l
Node/: CodeGenContext.h  NExpression.h  NStatement.h  node.h
Node/NExpressions/: NAssignment.h  NBinaryOperator.h  NBlock.h  NBoolean.h  NIdentifier.h  NInteger.h  NMethodCall.h  NPointer.h  NRational.h  NUnaryOperator.h
Node/NStatements/: NExpressionStatement.h  NFunctionDeclaration.h  NVariableDeclaration.h
diagrams/: NodeStructure.csv
docs/: Doxyfile.in
examplecodes/: bubblesort.pseudo  conditionals.pseudo  lineariskeresesrekurziv.pseudo  loops.pseudo  recursion.pseudo  runforever.pseudo
examplecodes/final/: lineariskeresesrekurziv.pseudo  loops.pseudo  recursion.pseudo
examplecodes/lexer_ok/: lnko.pseudo
examplecodes/parser/: iterate.pseudo  ok.pseudo  test.pseudo
misc/: indentations.pseudo  semantic_error.pseudo  types.pseudo
misc/lexer_error/: invalid_indent.pseudo  invalid_token.pseudo
misc/parser/: asd.pseudo  ifelse.pseudo  matrices.pseudo  ok.pseudo
src/: CMakeLists.txt  CodeGenContext.cpp  externfunctions.cpp  externfunctions.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.l  location.hh  main.cpp  makefile  makefile-old  node.cpp  node.h  parser.cpp  parser.h  parser.y  pseudo.h  scanner.h  visitor.h  visitorprintast.cpp  visitorsyntaxcheck.h
src/compiler/: CMakeLists.txt  CodeGenContext.h  externfunctions.cpp  externfunctions.h  interpreter.cpp  interpreter.h  lexer.l  main.cpp  node.h  parser.output  parser.y  pseudo.cpp  visitorprintast.cpp  visitorprintast.h  visitorsyntaxcheck.cpp
src/compiler/nodes/: assignment.cpp  binaryoperator.cpp  compareoperator.cpp  compareoperator.h  forloop.cpp  functiondeclaration.cpp  node.cpp  string.cpp  unaryoperator.cpp  variabledeclaration.h  vector.cpp  whileloop.cpp  whileloop.h
src/nodes/: assignment.h  binaryoperator.cpp  binaryoperator.h  forloop.cpp  forloop.h  functiondeclaration.cpp  functiondeclaration.h  node.h  string.h  unaryoperator.cpp  unaryoperator.h  variabledeclaration.cpp  vector.h  vectoraddelement.cpp  vectoraddelement.h
src/tests/: CMakeLists.txt  stdiostreamredirect.h  test.cpp  utest.h
testcodes/: assign_boolean.pseudo  assign_integer.pseudo  assign_rational.pseudo  assign_string.pseudo  binaryoperators_boolean.pseudo  binaryoperators_integer.pseudo  binaryoperators_rational.pseudo  conditionals_compareoperator.pseudo  functioncall.pseudo  loops_dowhile.pseudo  loops_forloop.pseudo  loops_while.pseudo  vector.pseudo
tests/: CMakeLists.txt  logical_operators.pseudo
